trainer hover animation mobile fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,7 +369,7 @@ footer a {
 
 .trainer-img {
   width: 100%;
-  min-height: 300px;
+  min-height: 400px;
   display: flex;
   padding: 15px;
   align-items: flex-end;
@@ -396,6 +396,7 @@ footer a {
   top:400px;
   overflow:hidden;
   transition:0.6s;
+  opacity:0;
 }
 
 .trainer-img h4 {
@@ -405,6 +406,7 @@ footer a {
   overflow:hidden;
   transition:0.8s;
   transition-delay:0.1s;
+  opacity:0;
 }
 
 .trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4, .trainer:hover .trainer-img::after {
@@ -420,12 +422,14 @@ footer a {
 
 .trainer-bio h3 {
   font-size: 28px;
+  display:none;
 }
 
 .trainer-bio h4 {
   font-weight: lighter;
   font-size: 22px;
   margin-bottom: 15px;
+  display:none;
 }
 
 /* SERVICE STYLES BEGIN */
@@ -654,6 +658,27 @@ footer a {
 
   .step-text {
     flex: 100%;  
+  }
+
+  .trainer-img::after {
+    display: none;
+  }
+  
+  .trainer-img h3 {
+    display: none;
+
+  }
+  
+  .trainer-img h4 {
+    display: none;
+  }
+
+  .trainer-bio h3 {
+    display: block;
+  }
+
+  .trainer-bio h4 {
+    display: block;
   }
 }
 
